--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -4,3 +4,4 @@ slang_words.description=Description
 slang_words.no_results=No results
 slang_words.pagination_text=Showing {0} of {1} results
 slang_words.show_more=Show more
+slang_words.search=Search
