--- a/src/main/resources/i18n/phrases_no.properties
+++ b/src/main/resources/i18n/phrases_no.properties
@@ -4,3 +4,4 @@ slang_words.description=Beskrivelse
 slang_words.no_results=Ingen resultater
 slang_words.pagination_text=Viser {0} av {1} resultater
 slang_words.show_more=Vis flere
+slang_words.search=Søk
