--- a/src/main/resources/i18n/phrases.properties
+++ b/src/main/resources/i18n/phrases.properties
@@ -5,3 +5,19 @@ slang_words.no_results=No results
 slang_words.pagination_text=Showing {0} of {1} results
 slang_words.show_more=Show more
 slang_words.search=Search
+
+quiz.start_quiz=Start quiz
+quiz.question_x_of_y=Question {0} of {1}
+quiz.try_again=Try again
+quiz.result_text={0} of {1} questions were correct
+quiz.options=Options
+quiz.check_answer=Check answer
+quiz.result=Result
+quiz.next_question=Next question
+quiz.feedback0=You missed the target!
+quiz.feedback1=At least you tried!
+quiz.feedback2=This could have gone better!
+quiz.feedback3=Nice try!
+quiz.feedback4=Very good!
+quiz.feedback4=Almost perfect!
+quiz.feedback6=Perfect!
