--- a/src/main/resources/i18n/phrases_no.properties
+++ b/src/main/resources/i18n/phrases_no.properties
@@ -5,3 +5,19 @@ slang_words.no_results=Ingen resultater
 slang_words.pagination_text=Viser {0} av {1} resultater
 slang_words.show_more=Vis flere
 slang_words.search=Søk
+
+quiz.start_quiz=Start quiz
+quiz.question_x_of_y=Spørsmål {0} av {1}
+quiz.try_again=Prøv igjen
+quiz.result_text=Du hadde {0} av {1} spørsmål riktig
+quiz.options=Alternativer
+quiz.check_answer=Sjekk svar
+quiz.result=Resultat
+quiz.next_question=Neste spørsmål
+quiz.feedback0=En real skivebom!
+quiz.feedback1=Du prøvde i det minste!
+quiz.feedback2=Det kunne ha gått bedre!
+quiz.feedback3=Godt forsøk!
+quiz.feedback4=Veldig bra!
+quiz.feedback4=Nesten perfekt!
+quiz.feedback6=Perfekt!
